--- a/sobremi.html
+++ b/sobremi.html
@@ -128,7 +128,7 @@
         <!-- Perfil -->
         <div class="zona-desc">
             <article class="process">
-                <img src="/Images/TD-perfil.JPG" 
+                <img src="https://blogger.googleusercontent.com/img/a/AVvXsEjOXUOPxVumyGJ9UcpasCb8vcQYGP5OA0Aj4vtklAQcoPlpKMZ3APyL7XtM8J-LkseWj1kZMkFza6sRGg_ccCee-7P8c5GMhvHD_Pfd9warx0xm69_uHckkyQaddCQFDbXEgCwu5l0d3_VkPBU8hUahZL5ZsvcKjT3ZAJw910QXe4Wf0DNOHkQUTqlY=s320" 
                 class="process-img"
                 alt="Proceso">
                 <h4>César E.</h4>
