--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </section>
 
         <section class="gallery">
-            <a href="#">
+            <a href="/Articles/alien.html">
                 <img src="https://1.bp.blogspot.com/-DUnYDOVshnU/YVEUicK4kHI/AAAAAAAAAMY/ceTvMrR0GdAjim0oqoMhxaFpQz1KkisaACLcBGAsYHQ/w494-h640/IMG_0039.JPG" 
                 alt="Alien">
             </a>
@@ -83,42 +83,42 @@
             <figcaption class="description">Alien 3</figcaption>
         </section>
         <section class="gallery">
-            <a href="#">
+            <a href="/Articles/xenomorph.html">
                 <img src="https://1.bp.blogspot.com/-FOksf7DghCE/YVEXZzD3f3I/AAAAAAAAANY/G2rzInpTavsxXBc696fsCtbc4QCpwe-rACLcBGAsYHQ/w640-h480/Xenomorph.JPG" 
                 alt="Xenomorph">
             </a>
             <figcaption class="description">Xenomorph</figcaption>
         </section>
         <section class="gallery">
-            <a href="#">
+            <a href="/Articles/tim.html">
                 <img src="https://1.bp.blogspot.com/-mf5rlbpc4W4/YVEUhz7sgGI/AAAAAAAAAMU/hOFSRO4GS5s1zORtW7QmT_JXV1Tg97F4wCLcBGAsYHQ/w640-h360/E2E6F9A0-C622-4142-AE69-78BDEC016503%2B2.JPG" 
                 alt="TimRiceOxley">
             </a>
             <figcaption class="description">Tim Rice Oxley</figcaption>
         </section>
         <section class="gallery">
-            <a href="#">
+            <a href="/Articles/venom.html">
                 <img src="https://1.bp.blogspot.com/-EuSYcWa0bh4/YVEUhSEkPVI/AAAAAAAAAMQ/MeeojFa0YggYyqeUgRVgTDaenaLqShOPgCLcBGAsYHQ/w640-h480/92CA3D7C-68B9-4330-8DC8-93391B89575D%2B2.JPG" 
                 alt="Venom">
             </a>
             <figcaption class="description">Venom</figcaption>
         </section>
         <section class="gallery">
-            <a href="#">
+            <a href="/Articles/strangers.html">
                 <img src="https://1.bp.blogspot.com/-6vMJhbsgZNs/YVEUjw7hW_I/AAAAAAAAAMk/pkSOiNxGpCgJk4h5pZGl8ZBvhnGICpCBQCLcBGAsYHQ/w480-h640/IMG_0045.JPG" 
                 alt="KeaneStrangers">
             </a>
             <figcaption class="description">Keane Strangers</figcaption>
         </section>
         <section class="gallery">
-            <a href="#">
+            <a href="/Articles/pintura.html">
                 <img src="https://1.bp.blogspot.com/-YHXJIz2Av7A/YVEUl-roOzI/AAAAAAAAAM0/AxMnd8HRKEk3fwMS0LBtyRAA0A4Fs-MVQCLcBGAsYHQ/w480-h640/IMG_0068.JPG" 
                 alt="Pintura 04/07/21">
             </a>
             <figcaption class="description">04/07/21</figcaption>
         </section>
         <section class="gallery">
-            <a href="#">
+            <a href="/Articles/tomchaplin.html">
                 <img src="https://1.bp.blogspot.com/-iaPswLHkVAo/YVEUlZb-NaI/AAAAAAAAAMw/s9EcIopaPisN7G-jC22H7jW-93FzT76UQCLcBGAsYHQ/w640-h482/IMG_0062.JPG" 
                 alt="TomChaplin">
             </a>
