--- a/sobremi.html
+++ b/sobremi.html
@@ -14,9 +14,9 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
         body {
-            padding-top: 60px;
-            padding-left: 60px;
-            padding-right: 60px;
+            padding-top: 90px;
+            padding-left: 90px;
+            padding-right: 90px;
         }
         .page-header {
             margin-bottom: 40px;
@@ -25,34 +25,41 @@
         /* Navegation */
 
         .title {
-            font-size: 20px;
+            font-size: 30px;
             position: absolute;
             font-family: sans-serif;
-            margin-top: 10px;
+            margin-top: 5px;
+            margin-left: 20px;
         }
+
         .nav {
             text-align: right;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
+
         .nav li{
             display: inline-block;
             position: relative;
             margin: 10px;
             right: 50px;
         }
+
         .nav li a {
             text-decoration: none;
             color: black;
-            font-size: 10px;
+            font-size: 15px;
             margin-right: 20px;
             color: rgb(147, 147, 147);
         }
+
         .nav li a:hover {
             color: black;
         }
+
         .nav .ubicacion {
             color: black;
         }
+
         hr {
             background-color: black;
         }
@@ -61,21 +68,24 @@
         .zona-desc {
             margin-left: 90px;
             margin-right: 90px;
-            margin-bottom: 40px;
+            margin-bottom: 70px;
+            margin-top: 70px;
         }
         .process {
             display: inline-block;
             justify-content: center;
             align-items: center;
             text-align: center;
+            margin-left: 50px;
+            padding-right: 100px;
         }
         .process h4 {
             position: relative;
-            width: 180px;
+            font-size: 25px;
         }
         .process-img {
             width: auto;
-            height: 170px;
+            height: 200px;
             object-fit: contain;
             border-radius: 100%;
         }
@@ -85,11 +95,12 @@
             position: absolute;
             text-align: left;
             margin-top: 20px;
-            font-size: 15px;
+            font-size: 20px;
         }
         .desc-PR {
             margin-bottom: 20px;
-            width: 400px;
+            width: 620px;
+            text-align: justify;
         }
 
         /* Footer */
@@ -97,13 +108,13 @@
             margin: 20px;
             text-align: center;
             color: rgb(164, 164, 164);
-            font-size: 12px;
+            font-size: 15px;
         }
         .links a {
             margin: 0 8px;
         }
         .links a i {
-            font-size: 25px;
+            font-size: 35px;
             color: rgb(164, 164, 164);
             margin: 10px 0;
         }
@@ -124,8 +135,8 @@
         <hr>
     </header>
 
+    <!-- Perfil -->
     <main>
-        <!-- Perfil -->
         <div class="zona-desc">
             <article class="process">
                 <img src="https://blogger.googleusercontent.com/img/a/AVvXsEjOXUOPxVumyGJ9UcpasCb8vcQYGP5OA0Aj4vtklAQcoPlpKMZ3APyL7XtM8J-LkseWj1kZMkFza6sRGg_ccCee-7P8c5GMhvHD_Pfd9warx0xm69_uHckkyQaddCQFDbXEgCwu5l0d3_VkPBU8hUahZL5ZsvcKjT3ZAJw910QXe4Wf0DNOHkQUTqlY=s320" 
