--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
             </ul>
         </nav>
         <hr>
+        <!-- Nav mobile -->
+        <nav>
+            <ul class="nav-mobile">
+                <li><a href="#" class="ubicacion">Galería</a></li>
+                <li><a href="./sobremi.html">Sobre mi</a></li>
+                <li><a href="#">Blog</a></li>
+            </ul>
+        </nav>
 
         <!-- Input lista -->
         <!-- <input list="Trabajos" value="Todos" class="list">
