--- a/sobremi.html
+++ b/sobremi.html
@@ -119,6 +119,127 @@
             margin: 10px 0;
         }
 
+
+
+        /* ---Mobile--- */
+
+
+
+
+/* Nav mobile */
+.nav-mobile {
+    text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: none;
+}
+
+.nav-mobile li{
+    display: inline-block;
+    position: relative;
+    margin: 10px;
+}
+
+.nav-mobile li a {
+    text-align: center;
+    text-decoration: none;
+    color: black;
+    font-size: 15px;
+    margin-right: 20px;
+    color: rgb(147, 147, 147);
+}
+
+.nav-mobile li a:hover {
+    color: black;
+}
+
+.nav-mobile .ubicacion {
+    color: black;
+}
+
+
+
+@media only screen and (max-width: 830px) {
+    .page-header {
+        margin-bottom: 0;
+    }
+    .title {
+        position: relative;
+        text-align: center;
+        margin-left: 0;
+    }
+    .nav {
+        display: none;
+    }
+    .nav-mobile {
+        display: block;
+    }
+}
+
+@media only screen and (max-width: 375px) {
+    body {
+        padding-top: 80px;
+        padding-left: 60px;
+        padding-right: 60px;
+    }
+    /* nav */
+    .page-header {
+        margin-bottom: 0;
+    }
+    .title {
+        position: relative;
+        text-align: center;
+        margin-left: 0;
+        font-size: 20px;
+    }
+    .nav {
+        display: none;
+    }
+    .nav-mobile li a {
+        font-size: 10px;
+        margin-right: 5px;
+    }
+    .nav-mobile {
+        display: block;
+    }
+    /* main */
+    .zona-desc {
+        margin-top: 30px;
+        margin-bottom: 30px;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+    }
+    .desc {
+        position: static;
+        margin-left: 0;
+        width: 5%;
+    }
+    .desc-PR {
+        width: 250px;
+    }
+    .desc-pregunta {
+        font-size: 15px;
+    }
+    .desc-respuesta {
+        font-size: 14px;
+    }
+    .process {
+        display: block;
+        margin-left: 0;
+        padding-right: 0;
+    }
+    .process-img {
+        height: 150px;
+    }
+    /* footer */
+    footer {
+        font-size: 13px;
+    }
+    .links a i {
+        font-size: 25px;
+    }
+}
+
     </style>
 </head>
 <body>
@@ -133,6 +254,14 @@
             </ul>
         </nav>
         <hr>
+        <!-- Nav mobile -->
+        <nav>
+            <ul class="nav-mobile">
+                <li><a href="./index.html">Galería</a></li>
+                <li><a href="#" class="ubicacion">Sobre mi</a></li>
+                <li><a href="#">Blog</a></li>
+            </ul>
+        </nav>
     </header>
 
     <!-- Perfil -->
