--- a/sobremi.html
+++ b/sobremi.html
@@ -112,6 +112,7 @@
         }
         .links a {
             margin: 0 8px;
+            text-decoration: none;
         }
         .links a i {
             font-size: 35px;
@@ -177,7 +178,7 @@
 
 @media only screen and (max-width: 375px) {
     body {
-        padding-top: 80px;
+        padding-top: 60px;
         padding-left: 60px;
         padding-right: 60px;
     }
