--- a/sobremi.html
+++ b/sobremi.html
@@ -17,6 +17,8 @@
             padding-top: 90px;
             padding-left: 90px;
             padding-right: 90px;
+            background-color: #f4f4f4;
+            background-image: url("data:image/svg+xml,%3Csvg width='30' height='30' viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 10h10v10H0V10zM10 0h10v10H10V0z' fill='%23010002' fill-opacity='0.03' fill-rule='evenodd'/%3E%3C/svg%3E");
         }
         .page-header {
             margin-bottom: 40px;
